k8s-manifests/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app-prod
  labels:
    environment: production
    app: todo-manager
